--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
       "@rocketseat/eslint-config/node"
     ],
   "rules": {
+    "no-useless-constructor": 0,
     "prettier/prettier": [
       "error",
       {
