--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --project unit",
+    "test:e2e": "vitest run --project e2e",
+    "test:watch": "vitest --project unit",
+    "test:watch:e2e": "vitest --project e2e",
+
     "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
@@ -18,14 +21,15 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "22.13.14",
-    "@vitest/coverage-v8": "3.1.1",
+    "@vitest/coverage-v8": "3.1.2",
+    "@vitest/ui": "3.1.2",
     "eslint": "8.57.1",
     "prisma": "6.5.0",
     "tsup": "8.4.0",
     "tsx": "4.19.3",
     "typescript": "5.8.2",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.1.1"
+    "vitest": "3.1.2"
   },
   "dependencies": {
     "@fastify/jwt": "9.1.0",
