--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "22.13.14",
+    "@types/supertest": "6.0.3",
     "@vitest/coverage-v8": "3.1.2",
     "@vitest/ui": "3.1.2",
     "eslint": "8.57.1",
@@ -37,6 +38,7 @@
     "dayjs": "1.11.13",
     "dotenv": "16.4.7",
     "fastify": "5.2.2",
+    "supertest": "7.1.0",
     "zod": "3.24.2"
   }
 }
